== 1.0.0

* enhancements
  * Support for chained functions.
  * The 'jqgrid' method is renamed and rewritten to fully support calls to jqgrid apis.
  * Get the page number for the json response from the will_paginate resultset.

* bug fixes
  * Fix order_by_from_params when sidx is blank.

== 0.2.0

* enhancements
  * Navigator options fully supported.

* bug fixes
  * Get pager id from the options hash in any of the formats accepted by
    jqGrid.