@@ -1,3 +1,8 @@
+
+* bug fixes
+  * In 'json_for_jqgrid' method do not return nil if +records+ is empty and return the
+    json string in spite of that.
+
 == 1.0.0
 
 * enhancements
